--- a/grpc-rpc2-skeleton/src/main/profiles/local/common.properties
+++ b/grpc-rpc2-skeleton/src/main/profiles/local/common.properties
@@ -1,3 +1,6 @@
-thrift.zookeeper.address=172.16.2.145:2181
+grpc.zookeeper.address=172.16.2.145:2181
+
+grpc.rpc.host=localhost
+grpc.rpc.port=10086
 
 
