--- a/grpc-rpc2-skeleton/src/main/profiles/beta/common.properties
+++ b/grpc-rpc2-skeleton/src/main/profiles/beta/common.properties
@@ -1,1 +1,6 @@
-thrift.zookeeper.address=localhost:2181
+grpc.zookeeper.address=172.16.2.145:2181
+
+grpc.rpc.host=localhost
+grpc.rpc.port=10086
+
+
