--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <org.springframework.version>4.3.11.RELEASE</org.springframework.version>
+        <!--<org.springframework.version>4.3.11.RELEASE</org.springframework.version>-->
         <!--<org.springframework.version>5.0.0.M5</org.springframework.version>-->
+        <org.springframework.version>5.0.0.RELEASE</org.springframework.version>
         <jdk.version>1.8</jdk.version>
     </properties>
 
