--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,13 @@
     </properties>
 
 
-    <repositories>
-        <repository>
-            <id>repository.springframework.maven.milestone</id>
-            <name>Spring Framework Maven Milestone Repository</name>
-            <url>http://repo.spring.io/milestone/</url>
-        </repository>
-    </repositories>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>repository.springframework.maven.milestone</id>-->
+            <!--<name>Spring Framework Maven Milestone Repository</name>-->
+            <!--<url>http://repo.spring.io/milestone/</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
 
 
 
